--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.15",
     "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.42.5",
     "express-rate-limit": "^7.2.0",
