implemented blog posting feature on the website. Images that's showing on the post is a placeholder at the moment.

--- a/package.json
+++ b/package.json
@@ -19,16 +19,24 @@
     "rate-limiter-flexible": "^5.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.8.2",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.24.1",
+    "react-syntax-highlighter": "^15.5.0",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/remark-prism": "^1.3.7",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
