--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.42.5",
     "express-rate-limit": "^7.2.0",
+    "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
     "next": "14.2.2",
     "nodemailer": "^6.9.13",
