--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
